spade-tests/src/snapshots/spade_tests__ast_lowering__negative_stage_index_later.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock, x: int<8>) -> int<8> {
    reg;
    reg;
        let a = stage(-5).x;
    reg;
        0
}


error: Pipeline references cannot refer to negative stages, inferred -3
  ┌─ testinput:4:17
  │
4 │         let a = stage(-5).x;
  │                 ^^^^^^^^^ This references stage {rdepth}
  │
  = help: This offset is relative to the current stage which is 2
